page 3 overflow issue solved, need to design layout

--- a/src/main/resources/static/css/navigation.css
+++ b/src/main/resources/static/css/navigation.css
@@ -4,8 +4,7 @@
     top: 0;
     right: 0;
     height: 80px;
-    /*indicate the position, for example 1 means all overall the top 0 */
-    /*z-index: 1;*/
+    z-index: 1;
 }
 
 .nav-masthead .nav-link {
