--- a/src/main/resources/static/css/rubbishStyle.css
+++ b/src/main/resources/static/css/rubbishStyle.css
@@ -26,6 +26,7 @@ table {
     width: 100%;
     z-index: 999;
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 /*.text {*/
